# jackpolynomials

./: CHANGELOG.md  README.md  jackpolynomials.cabal  stack.yaml
.github/workflows/: Stack-lts.yml  Stack-nightly.yml
benchmarks/: Main.hs
src/: GPochhammer.hs  Internal.hs  Jack.hs  Jack3.hs  Jack4.hs  Jack5.hs  JackPol.hs
src/Math/Algebra/: Combinatorics.hs  Jack.hs  JackPol.hs  JackSymbolicPol.hs  SymmetricPolynomials.hs
src/Math/Algebra/Jack/: Auxiliary.hs  GPochhammer.hs  HypergeoPQ.hs  Internal.hs  SymmetricPolynomials.hs
tests/: Main.hs
z/: HallInnerProductFromPScombination.hs  plethysm.hs
