name:                jackpolynomials
version:             1.0.0.0
synopsis:            Jack, zonal, and Schur polynomials
description:         This library can evaluate Jack polynomials, zonal polynomials
                     .
                     and Schur polynomials. It is also able to compute them in symbolic form.
homepage:            https://github.com/stla/jackpolynomials#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2022 Stéphane Laurent
category:            Math, Algebra
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Algebra.Jack.GPochhammer
                     , Math.Algebra.Jack
                     , Math.Algebra.JackPol
  other-modules:       Math.Algebra.Jack.Internal
  build-depends:       base >= 4.7 && < 5
                     , ilist
                     , array
                     , lens
                     , math-functions
                     , mpolynomials
                     , numeric-prelude
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/jack
